gramatica.txt
Comando -> CreateDatabase
         | CreateTable
         | Select.

Select -> SELECT Proyeccion FROM identificador CondicionResultado.

Proyeccion -> '*' 
           | ListaColumnas.

ListaColumnas -> identificador ListaColumnasPrime.

ListaColumnasPrime -> coma identificador ListaColumnasPrime
                    | ε.

CondicionResultado -> Condicion CondicionResultadoPrime
                    | Resultado.

CondicionResultadoPrime -> Resultado 
                         | ε.

Condicion -> WHERE ExpresionCondicional.

Resultado -> separador identificador.

ExpresionCondicional -> Termino OperadorRelacional Termino ExpresionCondicionalPrime.

ExpresionCondicionalPrime -> OperadorLogico ExpresionCondicional
                           | ε.

OperadorRelacional -> 'igual' 
                    | 'diferente' 
                    | 'menor' 
                    | 'menorigual' 
                    | 'mayor' 
                    | 'mayorigual'.

OperadorLogico -> and 
                | or.

Termino -> identificador 
         | numero
         | cadena.
